--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-github-api",
+  "name": "nishanth-github-project",
   "description": "https://redux.js.org/docs/advanced/ExampleRedditAPI.html",
   "version": "0.0.172",
   "dependencies": {
